--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- HERO SECTION -->
     <header>
-        <div class="backgroundimage"><img src="../assest/image.png" height="700px"></div>
+        <div class="backgroundimage"><img src="./assest/image.png" height="700px"></div>
         <div class="hero-content">
             <h4 class="typing">Hello, I am</h4>
             <h1 class="glitch" data-text="SYED SULAIMAN S">SYED SULAIMAN S</h1>
@@ -89,11 +89,11 @@
             <div class="box">
                 <div class="content">
                     <a href="
-https://seiyad.github.io/static-website/"><img src="../assest/projectone.png" height="400px" width="600px"></a>
+https://seiyad.github.io/static-website/"><img src="./assest/projectone.png" height="400px" width="600px"></a>
                 </div>
             </div>
             <div class="box">
-                <div class="content"><a href=""><img src="../assest/projecttwo.png" height="400px" width="600px"></a>
+                <div class="content"><a href=""><img src="./assest/projecttwo.png" height="400px" width="600px"></a>
                 </div>
             </div>
         </div>
