--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@ https://seiyad.github.io/static-website/"><img src="./assest/projectone.png" hei
         <h2 class="section-title">Get In Touch</h2>
         <div class="content-whole">
             <div class="contact-box">
-                <a href="#" class="contact-icon"><img src="../assest/github (1).png" alt="GitHub"></a>
-                <a href="#" class="contact-icon"><img src="../assest/linkedin.png" alt="LinkedIn"></a>
-                <a href="#" class="contact-icon"><img src="../assest/communication.png" alt="Mail"></a>
-                <a href="#" class="contact-icon"><img src="../assest/social - Copy.png" alt="Social"></a>
+                <a href="#" class="contact-icon"><img src="./assest/github (1).png" alt="GitHub"></a>
+                <a href="#" class="contact-icon"><img src="./assest/linkedin.png" alt="LinkedIn"></a>
+                <a href="#" class="contact-icon"><img src="./assest/communication.png" alt="Mail"></a>
+                <a href="#" class="contact-icon"><img src="./assest/social - Copy.png" alt="Social"></a>
             </div>
             <div class="resume">
                 <h1>Resume</h1>
