--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ https://seiyad.github.io/static-website/"><img src="./assest/projectone.png" hei
                 <a href="#" class="contact-icon"><img src="./assest/social - Copy.png" alt="Social"></a>
             </div>
             <div class="resume">
-                <h1><a href="./assest/Sulaiman _ Resume.pdf">Resume</h1>
+                <h1><a href="">Resume</h1>
             </div>
         </div>
     </footer>
