--- a/index.html
+++ b/index.html
@@ -88,12 +88,11 @@
         <div id="projectimg">
             <div class="box">
                 <div class="content">
-                    <a href="
-https://seiyad.github.io/static-website/"><img src="./assest/projectone.png" height="400px" width="600px"></a>
+                    <a href="https://seiyad.github.io/static-website/"><img src="./assest/projectone.png" height="400px" width="600px"></a>
                 </div>
             </div>
             <div class="box">
-                <div class="content"><a href=""><img src="./assest/projecttwo.png" height="400px" width="600px"></a>
+                <div class="content"><a href="https://seiyad.github.io/second-project/"><img src="./assest/projecttwo.png" height="400px" width="600px"></a>
                 </div>
             </div>
         </div>
@@ -111,10 +110,9 @@ https://seiyad.github.io/static-website/"><img src="./assest/projectone.png" hei
         <h2 class="section-title">Get In Touch</h2>
         <div class="content-whole">
             <div class="contact-box">
-                <a href="#" class="contact-icon"><img src="./assest/github (1).png" alt="GitHub"></a>
-                <a href="#" class="contact-icon"><img src="./assest/linkedin.png" alt="LinkedIn"></a>
-                <a href="#" class="contact-icon"><img src="./assest/communication.png" alt="Mail"></a>
-                <a href="#" class="contact-icon"><img src="./assest/social - Copy.png" alt="Social"></a>
+                <a href="https://github.com/seiyad" class="contact-icon"><img src="./assest/github (1).png" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/seiyad-sulaiman-7281b9395/" class="contact-icon"><img src="./assest/linkedin.png" alt="LinkedIn"></a>
+                <a href="seiyad823@gmail.com" class="contact-icon"><img src="./assest/communication.png" alt="Mail"></a>
             </div>
             <div class="resume">
                 <h1><a href="">Resume</h1>
