--- a/index.html
+++ b/index.html
@@ -112,27 +112,13 @@
         <h2 class="section-title">Get In Touch</h2>
         <div class="content-whole">
             <div class="contact-box">
-<<<<<<< HEAD:home.html
-                <a href="#" class="contact-icon"><img src="./assest/github (1).png" alt="GitHub"></a>
+                <a href="" class="contact-icon"><img src="./assest/github (1).png" alt="GitHub"></a>
                 <a href="#" class="contact-icon"><img src="./assest/linkedin.png" alt="LinkedIn"></a>
                 <a href="#" class="contact-icon"><img src="./assest/communication.png" alt="Mail"></a
                 <a href="#" class="contact-icon"><img src="./assest/social - Copy.png" alt="Social"></a>
-=======
-                <a href="https://github.com/seiyad" class="contact-icon"><img src="./assest/github (1).png" alt="GitHub"></a>
-                <a href="https://www.linkedin.com/in/seiyad-sulaiman-7281b9395/" class="contact-icon"><img src="./assest/linkedin.png" alt="LinkedIn"></a>
-                <a href="seiyad823@gmail.com" class="contact-icon"><img src="./assest/communication.png" alt="Mail"></a>
->>>>>>> da589e17e0b54e0456afd7678544bed309bc2446:index.html
             </div>
             <div class="resume">
-<<<<<<< HEAD
                 <h1><a href="">Resume</h1>
-=======
-                <h1><a href="file:///C:/Users/SeiyadSulaimanSaguba/Downloads/Sulaiman%20_%20Resume.pdf">Resume</h1>
->>>>>>> f562adf3d4230fa5eb3231b7e011fb8fae1f7469
             </div>
-        </div>
     </footer>
-
-</body>
-
 </html>
