--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <div class="contact-box">
                 <a href="" class="contact-icon"><img src="./assest/github (1).png" alt="GitHub"></a>
                 <a href="#" class="contact-icon"><img src="./assest/linkedin.png" alt="LinkedIn"></a>
-                <a href="#" class="contact-icon"><img src="./assest/communication.png" alt="Mail"></a
-                <a href="#" class="contact-icon"><img src="./assest/social - Copy.png" alt="Social"></a>
+                <a href="#" class="contact-icon"><img src="./assest/communication.png" alt="Mail"></a >
+                    
             </div>
             <div class="resume">
                 <h1><a href="">Resume</h1>
