--- a/index.html
+++ b/index.html
@@ -112,11 +112,9 @@
         <h2 class="section-title">Get In Touch</h2>
         <div class="content-whole">
             <div class="contact-box">
-                <a href="" class="contact-icon"><img src="./assest/github (1).png" alt="GitHub"></a>
-                <a href="#" class="contact-icon"><img src="./assest/linkedin.png" alt="LinkedIn"></a>
-                <a href="#" class="contact-icon"><img src="./assest/communication.png" alt="Mail"></a >
-                    
-            </div>
+                <a href="https://github.com/seiyad" class="contact-icon"><img src="./assest/github (1).png" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/seiyad-sulaiman-7281b9395/" class="contact-icon"><img src="./assest/linkedin.png" alt="LinkedIn"></a>
+                </div>
             <div class="resume">
                 <h1><a href="">Resume</h1>
             </div>
