--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <a href="https://www.linkedin.com/in/seiyad-sulaiman-7281b9395/" class="contact-icon"><img src="./assest/linkedin.png" alt="LinkedIn"></a>
                 </div>
             <div class="resume">
-                <h1><a href="">Resume</h1>
+                <h1><a href="https://docs.google.com/document/d/1WDrDonS1jtheqtg3R5Q1NyMQTpMWeKWReu6XJ0J65Q8/edit?usp=drive_link">Resume</h1>
             </div>
     </footer>
 </html>
